// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUser component should render with button disabled 1`] = `
<div>
  <div>
    <input
      id="name"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label
      htmlFor="name"
    >
      Name
    </label>
    <input
      id="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
    <label
      htmlFor="email"
    >
      Email
    </label>
    <CheckboxButton
      checked={false}
      label="Doctor"
      onChange={[Function]}
      value="isDoctor"
    />
    <CheckboxButton
      checked={false}
      label="Specialist"
      onChange={[Function]}
      value="isSpecialist"
    />
  </div>
  <div>
    <Button
      disabled={true}
      onClick={[Function]}
    >
      Add User
    </Button>
  </div>
</div>
`;

exports[`AddUser component should render with button enabled 1`] = `
<div>
  <div>
    <input
      id="name"
      onChange={[Function]}
      type="text"
      value="Marty McFly"
    />
    <label
      htmlFor="name"
    >
      Name
    </label>
    <input
      id="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="marty@mcfly.com"
    />
    <label
      htmlFor="email"
    >
      Email
    </label>
    <CheckboxButton
      checked={false}
      label="Doctor"
      onChange={[Function]}
      value="isDoctor"
    />
    <CheckboxButton
      checked={false}
      label="Specialist"
      onChange={[Function]}
      value="isSpecialist"
    />
  </div>
  <div>
    <Button
      disabled={false}
      onClick={[Function]}
    >
      Add User
    </Button>
  </div>
</div>
`;
